--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,11 +25,15 @@
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- Supabase JS -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="../JS/shared/supabase-client.js"></script>
 </head>
+
 <body class="bg-gray-50 flex items-center justify-center min-h-screen font-sans">
 
-    <main class="w-full max-w-sm p-8 bg-white rounded-2xl shadow-xl transform transition-all duration-500 ease-out opacity-0 translate-y-4" id="loginHeader">
-        
+    <main
+        class="w-full max-w-sm p-8 bg-white rounded-2xl shadow-xl transform transition-all duration-500 ease-out opacity-0 translate-y-4"
+        id="loginHeader">
+
         <div class="text-center mb-8">
             <!-- Placeholder for Logo if needed, using text for now -->
             <h1 class="text-3xl font-bold text-gray-800">Bienvenido</h1>
@@ -38,7 +43,8 @@
         <form id="loginForm" class="space-y-6" novalidate>
             <!-- Email Input -->
             <div class="relative group">
-                <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-400 group-focus-within:text-primary transition-colors duration-300">
+                <div
+                    class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-400 group-focus-within:text-primary transition-colors duration-300">
                     <i class="fas fa-envelope"></i>
                 </div>
                 <input type="email" id="email" name="email" required
@@ -48,13 +54,15 @@
 
             <!-- Password Input -->
             <div class="relative group">
-                <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-400 group-focus-within:text-primary transition-colors duration-300">
+                <div
+                    class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-400 group-focus-within:text-primary transition-colors duration-300">
                     <i class="fas fa-lock"></i>
                 </div>
                 <input type="password" id="password" name="password" required
                     class="block w-full pl-10 pr-10 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition-all duration-300 placeholder-gray-400"
                     placeholder="Contraseña">
-                <div class="absolute inset-y-0 right-0 pr-3 flex items-center cursor-pointer text-gray-400 hover:text-primary transition-colors duration-300" id="togglePassword">
+                <div class="absolute inset-y-0 right-0 pr-3 flex items-center cursor-pointer text-gray-400 hover:text-primary transition-colors duration-300"
+                    id="togglePassword">
                     <i class="fas fa-eye"></i>
                 </div>
             </div>
@@ -64,19 +72,25 @@
                 class="w-full flex justify-center py-3 px-4 border border-transparent rounded-lg shadow-sm text-sm font-medium text-white bg-primary hover:bg-orange-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transform transition-all duration-300 hover:scale-[1.02]">
                 <span id="btnText">Iniciar Sesión</span>
                 <!-- Loading Spinner (Hidden by default) -->
-                <svg id="btnSpinner" class="hidden animate-spin ml-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <svg id="btnSpinner" class="hidden animate-spin ml-2 h-5 w-5 text-white"
+                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                     <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                    <path class="opacity-75" fill="currentColor"
+                        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                    </path>
                 </svg>
             </button>
         </form>
 
         <!-- Message Container -->
-        <div id="messageContainer" class="mt-4 hidden p-3 rounded-lg text-sm text-center transform transition-all duration-500 translate-y-2 opacity-0"></div>
+        <div id="messageContainer"
+            class="mt-4 hidden p-3 rounded-lg text-sm text-center transform transition-all duration-500 translate-y-2 opacity-0">
+        </div>
 
     </main>
 
     <!-- Custom JS -->
     <script src="../JS/script.js"></script>
 </body>
+
 </html>
